# customizable-gpt-chatbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Taskfile.yml  alembic.ini  example.env  filestructure.txt  manage.py  pyproject.toml  requirements.txt
app/: celery_worker.py  config.py  main.py  permissions.py  schemas.py
app/routers/: api_v1.py
app/utils/: message_handler.py  notifications.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
askchatbot/: admin.py  apps.py  models.py  serializers.py  task.py  tasks.py  tests.py  urls.py  views.py
ausers/: admin.py  apps.py  backends.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
chatbot/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
cli/loom_cli/: __init__.py  main.py
cli/veldra_cli/: __init__.py  main.py
common/: helpers.py  serializers.py  tasks.py
config/: celery.py  settings.py  urls.py
config/settings/: __init__.py  common.py  key_values.py  stage.py
customizableGpt3Cchatbot/: urls.py
customizableGpt3Chatbot/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
customizableGpt3Chatbot/settings/: __init__.py  common.py  local.py  prod.py
deploy/: docker-compose.yml
deploy/alembic/: env.py  script.py.mako
deploy/migrations/: 0001_init.sql
docs/: ARCHITECTURE.md
docs/screenshots/: README.md
evals/: __init__.py
evals/decision_loop/: __init__.py  run.py
evals/nl_to_spec/: __init__.py  cases.py  run.py
notifications/: apps.py  services.py
notifications/channels/: email.py
scripts/: quickstart.sh
site_settings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
static/: .gitkeep
training_model/: admin.py  apps.py  faiss_helpers.py  models.py  pinecone_helpers.py  urls.py  views.py
users/: admin.py  backends.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
(+111 files in other folders)
