[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veldra"
version = "0.1.0"
description = "Veldra — a self-hostable agent-harness platform. Talk an agent into existence."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }

dependencies = [
  # LLM + agent protocol
  "anthropic[mcp]>=0.40",
  "mcp>=1.2",
  # API
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1",
  # data / config
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "pgvector>=0.3",
  "qdrant-client>=1.10",
  "redis>=5.0",
  "boto3>=1.34",
  # RAG ingest
  "pypdf>=4.2",
  "pdfplumber>=0.11",
  "tiktoken>=0.7",
  # self-mod
  "jsonpatch>=1.33",
  # http client (CLI, embeddings via OpenAI/Ollama REST)
  "httpx>=0.27",
  # CLI
  "typer>=0.12",
  "rich>=13.7",
  # observability
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[project.scripts]
veldra = "veldra_cli.main:app"

# Single distribution assembled from the monorepo's package roots.
[tool.hatch.build.targets.wheel]
packages = [
  "packages/spec-schema/veldra_spec",
  "packages/llm-providers/veldra_llm",
  "packages/mcp-client/veldra_mcp",
  "packages/mcp-servers/veldra_mcp_servers",
  "packages/thinking-methods/veldra_thinking",
  "services/app/veldra_app",
  "cli/veldra_cli",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "packages", "services"]
